--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -166,4 +166,8 @@
   <dimen name="placepage_banner_icon_size">22dp</dimen>
   <dimen name="placepage_banner_icon_size_full">40dp</dimen>
 
+  <!-- Place page taxi-->
+  <dimen name="placepage_taxi_button_min_width">96dp</dimen>
+  <dimen name="placepage_taxi_padding_vert">14dp</dimen>
+  <dimen name="placepage_taxi_button_padding_vert">10dp</dimen>
 </resources>
