--- a/android/res/layout-w600dp-port/place_page_details.xml
+++ b/android/res/layout-w600dp-port/place_page_details.xml
@@ -80,13 +80,17 @@
 
           <include layout="@layout/place_page_opening_hours"/>
 
-          <include layout="@layout/place_page_latlon"/>
-
           <include layout="@layout/place_page_wifi"/>
 
           <include layout="@layout/place_page_operator"/>
 
           <include layout="@layout/place_page_cuisine"/>
+
+          <include layout="@layout/place_page_latlon"/>
+
+          <include layout="@layout/divider_horizontal"/>
+
+          <include layout="@layout/place_page_taxi"/>
 
           <include layout="@layout/place_page_hotel_nearby"/>
 
