--- a/iphone/Maps/Classes/CustomViews/MapViewControls/Search/TabbedView/HistoryTab/MWMSearchHistoryClearCell.xib
+++ b/iphone/Maps/Classes/CustomViews/MapViewControls/Search/TabbedView/HistoryTab/MWMSearchHistoryClearCell.xib
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -25,8 +29,8 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6x5-bn-Z1n" userLabel="Separator">
-                        <rect key="frame" x="60" y="43" width="260" height="1"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.12" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="60" y="42" width="260" height="1"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="fa3-ZJ-pk5"/>
                         </constraints>
@@ -37,7 +41,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clear History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUE-gB-cha" userLabel="Clear label">
                         <rect key="frame" x="60" y="12" width="244" height="20"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="regular17"/>
@@ -49,10 +53,11 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="6x5-bn-Z1n" secondAttribute="bottom" id="06Q-0q-3Tu"/>
                     <constraint firstAttribute="centerY" secondItem="hch-c6-ulY" secondAttribute="centerY" id="51N-L0-MsL"/>
+                    <constraint firstAttribute="bottom" secondItem="uUE-gB-cha" secondAttribute="bottom" constant="11" id="Bn3-BC-B6d"/>
                     <constraint firstItem="hch-c6-ulY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="EmW-eh-qMa"/>
                     <constraint firstAttribute="trailing" secondItem="uUE-gB-cha" secondAttribute="trailing" constant="16" id="UyN-wL-XYy"/>
+                    <constraint firstItem="uUE-gB-cha" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="ZbM-oP-QKn"/>
                     <constraint firstItem="uUE-gB-cha" firstAttribute="leading" secondItem="6x5-bn-Z1n" secondAttribute="leading" id="bJD-xj-etH"/>
-                    <constraint firstAttribute="centerY" secondItem="uUE-gB-cha" secondAttribute="centerY" id="fvq-Ro-rpz"/>
                     <constraint firstItem="6x5-bn-Z1n" firstAttribute="leading" secondItem="hch-c6-ulY" secondAttribute="trailing" constant="16" id="z5E-on-8XQ"/>
                     <constraint firstAttribute="trailing" secondItem="6x5-bn-Z1n" secondAttribute="trailing" id="zbS-mM-SJH"/>
                 </constraints>
