--- a/iphone/Maps/Classes/CustomViews/MapViewControls/Search/TabbedView/HistoryTab/MWMSearchHistoryMyPositionCell.xib
+++ b/iphone/Maps/Classes/CustomViews/MapViewControls/Search/TabbedView/HistoryTab/MWMSearchHistoryMyPositionCell.xib
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uvh-nl-Yob" id="JF3-jd-gfD">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_current_position" translatesAutoresizingMaskIntoConstraints="NO" id="hik-Fn-AeJ" userLabel="Icon">
@@ -25,8 +29,8 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5vp-WU-ZFN" userLabel="Separator">
-                        <rect key="frame" x="60" y="43" width="260" height="1"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.12" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="60" y="42" width="260" height="1"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="br6-hl-Ecq"/>
                         </constraints>
@@ -37,7 +41,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My position" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruc-o5-hBy" userLabel="Clear label">
                         <rect key="frame" x="60" y="12" width="244" height="20"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="p2p_your_location"/>
@@ -51,9 +55,10 @@
                     <constraint firstItem="hik-Fn-AeJ" firstAttribute="leading" secondItem="JF3-jd-gfD" secondAttribute="leading" constant="16" id="HnE-gR-icX"/>
                     <constraint firstAttribute="trailing" secondItem="5vp-WU-ZFN" secondAttribute="trailing" id="QRt-IT-JVQ"/>
                     <constraint firstItem="5vp-WU-ZFN" firstAttribute="leading" secondItem="hik-Fn-AeJ" secondAttribute="trailing" constant="16" id="QWm-Nu-2te"/>
+                    <constraint firstItem="ruc-o5-hBy" firstAttribute="top" secondItem="JF3-jd-gfD" secondAttribute="top" constant="12" id="U3l-UG-bcb"/>
+                    <constraint firstAttribute="bottom" secondItem="ruc-o5-hBy" secondAttribute="bottom" constant="11" id="Vwu-mc-Qy2"/>
                     <constraint firstAttribute="bottom" secondItem="5vp-WU-ZFN" secondAttribute="bottom" id="bV6-fB-tRN"/>
                     <constraint firstItem="ruc-o5-hBy" firstAttribute="leading" secondItem="5vp-WU-ZFN" secondAttribute="leading" id="nI4-uc-JV4"/>
-                    <constraint firstAttribute="centerY" secondItem="ruc-o5-hBy" secondAttribute="centerY" id="obu-BB-qEf"/>
                     <constraint firstAttribute="centerY" secondItem="hik-Fn-AeJ" secondAttribute="centerY" id="wP9-mz-caJ"/>
                 </constraints>
             </tableViewCellContentView>
